# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2010  Vasco Nunes, Piotr Ożarowski


2010-10-08  Michael Jahn
	* IMDb plugin updated

---- 0.12 ----

2010-10-03  Piotr Ożarowski
	* Update translations
	* Version changed to 0.12

2010-10-01  Michael Jahn
	* [#640219] Original title is not well raised by Allocine plugin

2010-09-30  Michael Jahn
	* saving the width of the columns of the mainlist
	* default filter operator changed from equals to contains

2010-09-29  Michael Jahn
	* added fields "created" and "updated" to movie entries

2010-09-25  Michael Jahn
	* [#502990] Own settings will not be saved in HTML-Export

2010-09-15  Michael Jahn
	* workaround for [#574370] freeze when i select existing mysql database

2010-08-29  Piotr Ożarowski
    * Show deprecation warnings only in debug mode

2010-08-26  Michael Jahn
	* small backup optimizations

2010-08-22  Michael Jahn
	* reintroduce menu entry for loading and removing cover posters

2010-07-21  Michael Jahn
	* compatibility fixes for sqlalchemy 0.6
	* adjusting sqlite page size to the value of the filesystem page size
	  (performance optimization)

2010-07-15  Michael Jahn
	* updated movie plugin FilmeVonA-Z

2010-07-14  Michael Jahn
	* updated movie plugin AniDB

2010-06-25  Michael Jahn
	* updated movie plugin KinoDe
	* added HKMDB movie plugin
	* [#596700] IMDB doesn't import original title correctly

2010-06-07  Michael Jahn
	* added Clubedevideo movie plugin

2010-05-10  Michael Jahn
	* updated movie plugin IMDB-de
	* poster md5 wasn't saved if poster is already in database

2010-05-06  Michael Jahn
	* [#324171] PDF Font Size
	* support for covers, year, runtime, notes and plot for PDF export
	  elements for export can be deselected

2010-04-28  Piotr Ożarowski
	* Use 255 as maximum string length for few fields (MySQL apparently
	  doesn't like >=256 on some configurations)

2010-04-21  Michael Jahn
	* updated movie plugin AniDB

2010-03-28  Michael Jahn
	* updated movie plugin WP
