@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-10-08  Piotr Ożarowski
+	* Filmweb movie plugin updated (thanks to Mariusz Szczepanek)
+
 2010-10-08  Michael Jahn
 	* IMDb plugin updated
 
